# popgen

./: README.md  pyproject.toml  requirements.txt
popgen/: __init__.py  analyzer.py  encoder.py  lifter.py  pop.py  tarskilite.py
