[project]
name = "popgen-experimental"
version = "0.1.0"
description = "MaxSAT relaxation of PDDL plans (Muise et al. 2016)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bauhaus>=1.1.3",
    "networkx>=3.0",
    "python-sat>=0.1.8",
    "tarski>=0.8.2",
    "clingo>=5.6.0",
    "planutils>=0.10.19",
]
